--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
 
 <h1>Mini Form</h1>
 <!-- VOTRE FORMULAIRE -->
+<form action="https://kode.ch/getpost/" method="post">
+    <ul>
+        <li>
+            <label for="email">E-mail</label>
+            <input id="email" name="email" type="email">
+        </li>
+        <li>
+            <label for="mdp">Mot de passe</label>
+            <input id="mdp" name="pass" type="password">
+        <li>
+        <li>
+            <label for="Cmdp">Confimer mot de passe</label>
+            <input id="Cmdp" name="confirm" type="password">
+        </li>
+        <li>
+            <button>Créer un compte</button>
+        </li>
+    </ul>
+</form>
 <script src="js/main.js"></script>
 </body>
 </html>
