--- a/index.html
+++ b/index.html
@@ -22,8 +22,40 @@
 <form action="https://kode.ch/getpost/" method="post">
     <ul>
         <li>
+            <select name="bg" id="bg">
+                <!--option[value="$.jpg"]{Arrière-plan $}*10-->
+                <option value="1.jpg">Arrière-plan 1</option>
+                <option value="2.jpg">Arrière-plan 2</option>
+                <option value="3.jpg">Arrière-plan 3</option>
+                <option value="4.jpg">Arrière-plan 4</option>
+                <option value="5.jpg">Arrière-plan 5</option>
+                <option value="6.jpg">Arrière-plan 6</option>
+                <option value="7.jpg">Arrière-plan 7</option>
+                <option value="8.jpg">Arrière-plan 8</option>
+                <option value="9.jpg">Arrière-plan 9</option>
+                <option value="10.jpg">Arrière-plan 10</option>
+            </select>
+        </li>
+        <li>
+            <fieldset>
+                <legend>Genre</legend>
+                <label>
+                    <input type="radio" name="genre" value="f">
+                    <span>Femme</span>
+                </label>
+                <label>
+                    <input type="radio" name="genre" value="h">
+                    <span>Homme</span>
+                </label>
+                <label>
+                    <input type="radio" name="genre" value="n">
+                    <span>Autres</span>
+                </label>
+            </fieldset>
+        </li>
+        <li>
             <label for="email">E-mail</label>
-            <input id="email" name="email" type="email">
+            <input id="email" name="email" type="email" placeholder="nom.prenom@divtec.ch">
         </li>
         <li>
             <label for="mdp">Mot de passe</label>
